Fixed styling with regard to picture and card alignment on view product details page.

--- a/src/app/pages/view-all-products/view-all-products.component.css
+++ b/src/app/pages/view-all-products/view-all-products.component.css
@@ -5,7 +5,6 @@
    height: 100%;
 
    background-color: var(--white);
-   border-radius: var(-default-border-radius);
 }
 
 .card-img-top {
